# heavytables

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
examples/: .~lock.table_examples.xlsx#  create_test_data.py  heavylight_test.py  heavytables.py  heavytables_bound.py  hl_inherit.py  model_example.ipynb  result_extractors.py  table_examples.ipynb  table_examples.xlsx  table_int_str.csv
examples/.ipynb_checkpoints/: hl_inherit-checkpoint.py  result_extractors-checkpoint.py  table_examples-checkpoint.ipynb  xlsx_to_csv-checkpoint.py
examples/csv_tables/: cmi_TMNL16_tab_fake.xlsx  convert_cmi.py  fake_tmnl16.csv  fake_tmnl16_bound.csv  table_band.csv  table_int.csv  table_int_int.csv  table_int_str.csv  table_str_band.csv  table_str_int_band.csv
examples/data/: data_1.csv  data_100.csv  data_10000.csv  data_100000.csv
src/heavytables/: __init__.py
tests/: test_add.py
